--- a/report/report.bib
+++ b/report/report.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Christopher Fu at 2016-05-11 18:01:31 -0700 
+%% Created for Christopher Fu at 2016-05-11 19:15:33 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -50,11 +50,11 @@
 @article{Newell:1985aa,
 	Author = {Allen Newell and Stuart K. Card},
 	Date-Added = {2016-05-11 06:24:55 +0000},
-	Date-Modified = {2016-05-11 06:26:50 +0000},
+	Date-Modified = {2016-05-12 02:15:33 +0000},
 	Journal = {Human Computer Interaction},
 	Number = {3},
 	Pages = {209-242},
-	Title = {The Prospects for Psychologicla Science in Human-Computer Interaction},
+	Title = {The Prospects for Psychological Science in Human-Computer Interaction},
 	Volume = {1},
 	Year = {1985}}
 
