--- a/report/report.bib
+++ b/report/report.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Christopher Fu at 2016-05-11 19:15:33 -0700 
+%% Created for Christopher Fu at 2016-05-11 20:40:26 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{Chiang:2006aa,
+	Author = {David Chiang and Kevin Knight},
+	Date-Added = {2016-05-12 03:33:59 +0000},
+	Date-Modified = {2016-05-12 03:40:26 +0000},
+	Note = {Available at \url{http://www3.nd.edu/~dchiang/papers/synchtut.pdf}},
+	Title = {An Introduction to Synchronous Grammars},
+	Year = {2006}}
 
 @article{Liu:2005aa,
 	Author = {Hugo Liu and Henry Lieberman},
@@ -21,10 +29,10 @@
 @article{Manning:2014aa,
 	Author = {Christopher D. Manning and Mihai Surdeanu and John Bauer and Jenny Finkel and Steven J. Bethard and David McClosky},
 	Date-Added = {2016-05-11 10:32:59 +0000},
-	Date-Modified = {2016-05-11 10:34:30 +0000},
+	Date-Modified = {2016-05-12 03:36:57 +0000},
 	Journal = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
 	Pages = {55-60},
-	Title = {The Stanford CoreNLP Natural Language Processing Toolkit},
+	Title = {The {S}tanford {C}ore{NLP} Natural Language Processing Toolkit},
 	Year = {2014}}
 
 @book{Bergin:2013aa,
