--- a/report/report.tex
+++ b/report/report.tex
@@ -47,18 +47,27 @@
     % Affiliation / Address line 3 \\
     % {\tt email@domain} \\}
     Christopher Fu \\
-    \texttt{christopher.fu@yale.edu} \\}
+    \small{\texttt{christopher.fu@yale.edu}} \\ \And
+    David Kurkovskiy \\
+    \small{\texttt{david.kurkovskiy@yale.edu}} \\ \And
+    Wendy Chen \\
+    \small{\texttt{wendy.w.chen@yale.edu}} \\}
 \date{}
 
 \begin{document}
 \maketitle
 \begin{abstract}
-Students first starting to learn programming can often articulate how to solve problems in natural
-language but have difficulty converting their thoughts into actual code. Metafor, an existing
-project by Liu and Lieberman, allows users to describe a narrative and to receive a visualization
-of their narrative in the form of ``scaffolding code,'' which can help them convert their ideas to
-code. In the same vein, we aim to construct a parser and code generator that converts English
-language sentences into Karel J Robot Java source code.
+Natural language programming is a broad field that covers translation of natural language into
+working code.  The field is highly relevant because most people do not intuitively think in the
+same way that actual code is expressed.  Being able to turn natural language into logical,
+executable code has many applications.  For example, one of the most successful and powerful
+applications of natural language programming is evident in Wolfram Alpha, which can take free-form
+linguistics and generate a range of dynamic programs and relevant results.  On a smaller scale, our
+paper aims to address generating code from natural language on a much more constrained problem.  We
+aim to look at programming for the Karel J Robot universe, a library commonly used to introduce
+novices to object-oriented programming in Java.  Our problem examines how to translate English
+commands in the Karel J Robot universe into code that accurately represents the contents of the
+natural language input.
 \end{abstract}
 
 \section{Introduction}
@@ -75,15 +84,14 @@ of $N$ integers. In C, we could write a program like the one shown in Figure~\re
 Though writing such a program is second-nature for an experienced programmer, there is a large
 amount of implicit knowledge contained in such a program that must be remembered by a novice
 programmer. For example, we must recall the syntax of a variable declaration and a \texttt{for}
-loop, and we must remember which lines must be terminated with a semicolon which lines do not. We
-must also recall that arrays are 0-indexed, and the indexing variable \texttt{i} must run from 0 to
-$N - 1$. Even experienced programmers may inadvertently commit a so-called ``off-by-one error''
-from time to time. On the other hand, in Python, we could write a program shown in Figure
-~\ref{fig:python-prog}. The Python program does away with much of the C program's syntactical
-clutter---there are no curly braces to delimit a block and no \texttt{for} loop to begin with---
-and the (intuitively-named) function \texttt{sum()} performs the summing action.  The Python
-program more closely maps the programmer's intent to the actual code required to realize his
-intent.
+loop, and we must remember which lines must be terminated with a semicolon and which lines do not.
+We must also recall that arrays are 0-indexed, and the indexing variable \texttt{i} must run from 0
+to $N - 1$. Even experienced programmers may inadvertently commit a so-called ``off-by-one error''
+from time to time. On the other hand, in Python, we could write a program shown in Figure ~\ref{fig
+:python-prog}. The Python program does away with much of the C program's syntactical clutter---
+there are no curly braces to delimit a block and no \texttt{for} loop to begin with--- and the
+(intuitively-named) function \texttt{sum()} performs the summing action.  The Python program more
+closely maps the programmer's intent to the actual code required to realize his intent.
 
 \begin{figure}[ht]
 \begin{lstlisting}[language=C]
@@ -228,6 +236,28 @@ parser by a team member who did not participate in the development of the parser
 that the parser works on a very constrained subset of English, even more constrained than the
 subset of English language that makes sense in the context of the Karel universe.
 
+Another caveat about our results is that a number of test cases used English sentences that are
+beyond the subset of language that our parser checks.  For example, repeatable behaviors are not
+supported by the current parser.  Because the loop structure was not implemented, any natural
+language commands using words like ``repeat'' or ``until'' would not be interpreted into useful
+code by our parser.
+
+Ambiguity of language would also cause confusion for our parser.  A very basic ambiguity arises
+when giving commands like ``move left'' or ``move right.''  In many cases, it may be unclear
+whether the user is referring to the robot's left or right, or the user's left or right.  Both
+types of references were used within the 77 test cases we scored our parser on.
+
+Another source of language ambiguity arises from the use of anaphora, or references to expressions
+that depend upon other expressions. Ambiguity arising from anaphora commonly occurs when ambiguous
+pronouns are referenced.  For example, if the pronoun ``it'' is mentioned in a test, ``it'' might
+be referring to a beeper, a wall, or the robot itself.  If our parser is unable to pick out the
+correct dependencies of pronouns, then our parser will be unable to return useful code.
+
+Furthermore, various test cases included instructions telling the robot to perform action $X$ after
+doing action $Y$.  In order to handle such commands, our parser would need to be able to
+reconstruct the robot's steps, and this history does not necessarily match the order in which verbs
+appear in the sentence.
+
 \begin{table*}[ht]
 \centering
 % \resizebox{\textwidth}{!}{%
@@ -258,10 +288,39 @@ as the robot. The parser also does not handle English sentences that express an 
 some action a finite number of times (i.e., something that would be expressed with a \texttt{for}
 loop in Java).
 
-We also considered testing alternative approaches to building the parser, including using a
-synchronous grammar to translate between English and Java code and using machine learning to try to
-learn how
+In our method, we used dependency parsing to translate natural English language into useful code
+for the robot.  Dependency parsing was a feasible approach in the time we were given; however,
+alternate methods exist that also deserve some exploration.
 
+One such promising method is using synchronous context-free grammars (SCFG) to translate English
+commands in the Karel universe into code for the robot.  The general idea behind a context-free
+grammar is to use a static set of rules that can generate strings.  We begin with a set of terminal
+symbols, non-terminal symbols, production rules, and a special start symbol.  Context-free grammars
+do not capture all the nuances of English language; there are certain strings, for example, that
+can never be generated by a context-free grammar that could be generated by a regular expression.
+However, for a very constrained subset of English sentences such as those that would make sense
+within the Karel universe, one could see how context-free grammars might be powerful enough to
+generate the majority of English commands a robot might be given.
+
+A synchronous context-free grammar is a grammar that has analogous rules in two
+languages~\cite{Chiang:2006aa}. A common context in which synchronous context-free grammars appear
+are in translation between two languages, such as English and Japanese.  In our problem, the second
+language supported would be a code language.  For each production rule in English, we could
+construct a production rule in code. An easy example would be for each production rule concerning
+words like ``until'' or ``while,'' we would have an equivalent code production rule that generates
+the appropriate control structure. One could see how it would be feasible to match every logical
+English construction in our constrained universe to a logical construction in code.
+
+Another potential approach to this problem would be to build a parser that can be trained on a
+statistically significant set of code samples sent out in random tests to users that translate code
+into the simplest English sentences they can.  This method relies more on having a large amount of
+relevant data than it does on having a semantic understanding of the English command.  In fact,
+using such a method, we would completely bypass needing a semantic or dependency parse of the
+provided English sentence and instead solely apply machine learning tools to learn from human
+input.  While this approach might not be as linguistically powerful, it would be interesting to see
+what kind of results it might yield.  For comparison purposes, we would like to see if methods that
+do rely on a semantic understanding of the English input perform any better than methods that
+don't.
 
 % include your own bib file like this:
 %\bibliographystyle{acl}
@@ -271,34 +330,7 @@ learn how
 
 \appendix
 
-\section{Supplemental Material}
-\label{sec:supplemental}
-ACL 2016 also encourages the submission of supplementary material
-to report preprocessing decisions, model parameters, and other details
-necessary for the replication of the experiments reported in the
-paper. Seemingly small preprocessing decisions can sometimes make
-a large difference in performance, so it is crucial to record such
-decisions to precisely characterize state-of-the-art methods.
-
-Nonetheless, supplementary material should be supplementary (rather
-than central) to the paper. It may include explanations or details
-of proofs or deriations that do not fit into the paper, lists of
-features or feature tempates, sample inputs and outputs for a system,
-pseudo-code or source code, and data. (Source code and data should
-be separate uploads, rather than part of the paper).
-
-The paper should not rely on the supplementary material: while the paper
-may refer to and cite the supplementary material will be available to the
-reviewers, they will not be asked to review the
-supplementary material.
-
-Appendices (i.e. supplementary material in the form of proofs, tables,
-or pseudo-code) should come after the references, as shown here. Use
-\verb|\appendix| before any appendix section to switch the section
-numbering over to letters.
-
-\section{Multiple Appendices}
-\dots can be gotten by using more than one section. We hope you won't
-need that.
+\section{Project Source Code}
+The source code for our project can be found at \url{https://github.com/chrisf1337/nlp-karelj}.
 
 \end{document}
